--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path=/byproduct-disposal
+server.port=8888
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/byproduct_disposal_db?createDatabaseIfNotExist=true&serverTimezone=UTC
