--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.context-path=/byproduct-disposal
 server.port=8888
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/byproduct_disposal_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/byproduct_disposal_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
