--- a/client-app/angular.json
+++ b/client-app/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "client-app"
+  "defaultProject": "client-app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
