--- a/client-app/package.json
+++ b/client-app/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
     "rxjs": "~6.5.5",
+    "store": "^2.0.12",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
