--- a/client-app/package.json
+++ b/client-app/package.json
@@ -26,6 +26,7 @@
     "@ngrx/entity": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
+    "lodash": "^4.17.20",
     "rxjs": "~6.5.5",
     "store": "^2.0.12",
     "tslib": "^2.0.1",
